fixed about section alignment

--- a/css/style.css
+++ b/css/style.css
@@ -298,8 +298,6 @@ img.hamburger {
 
 
 
-
-
 /*Media Queries*/
 @media (max-width: 1310px) {
     .skillalign {
@@ -339,10 +337,6 @@ img.hamburger {
     a {
         font-size: 1rem;
     }
-
-    .projectheader a{
-        
-    }
     .banner {
         width: 100%;
         height: 800px;
@@ -365,6 +359,33 @@ img.hamburger {
         height: 20%;
     }
 }
+@media (max-width: 720px) {
+    .aboutbox {
+        width:auto;
+    }
+}
+
+@media (max-width: 685px) {
+    h1 {
+        padding-left: 40px;
+        line-height: 2.6rem;
+    }
+    .skillalign {
+        width: 170px;
+    }
+    p {
+        font-size: 1rem;
+        padding-top: 0px;
+        padding-right: 0;
+        padding-left: 2%;
+        margin-top: 20px;
+    }
+    .projects h2 {
+        padding-top: 10px;
+    }
+    
+}
+
 @media (max-width: 670px) {
     .nav {
         visibility: hidden;
@@ -474,26 +495,7 @@ img.hamburger {
         height: 20%;
     }
 }
-@media (max-width: 685px) {
-    h1 {
-        padding-left: 40px;
-        line-height: 2.6rem;
-    }
-    .skillalign {
-        width: 170px;
-    }
-    p {
-        font-size: 1rem;
-        padding-top: 0px;
-        padding-right: 0;
-        padding-left: 2%;
-        margin-top: 20px;
-    }
-    .projects h2 {
-        padding-top: 10px;
-    }
-    
-}
+
 @media (max-width: 580px) {
     html {
         overflow-x: hidden;
